--- a/demo.ipynb
+++ b/demo.ipynb
@@ -349,26 +349,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'t'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m a\u001b[39m=\u001b[39m{\n\u001b[0;32m      2\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m3\u001b[39m\n\u001b[0;32m      3\u001b[0m }\n\u001b[1;32m----> 4\u001b[0m \u001b[39mprint\u001b[39m(a[\u001b[39m\"\u001b[39;49m\u001b[39mt\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
-      "\u001b[1;31mKeyError\u001b[0m: 't'"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a={\n",
-    "    \"r\":3\n",
-    "}\n",
-    "print(a[\"t\"])"
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "tt = Path(\"work\\\\report\\\\requirements\\\\0y1 v485yw\\\\omkmz6ck9ig\\\\\")\n",
+    "\n",
+    "tt.is_dir()"
    ]
   }
  ],
