feat: beginning of definition

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -349,27 +349,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Definition Contents\n",
+      "- title : dfssdfsdf\n",
+      "- description : Definition as Markdown\n",
+      "- comment : Comment of the Definition - no use for acronyms\n",
+      "- synonyms : ['']\n",
+      "- definition_type : definition\n",
+      "- validation_status : unvalid\n"
+     ]
     }
    ],
    "source": [
-    "from pathlib import Path\n",
+    "from reqpy.definition import Definition\n",
     "\n",
-    "\n",
-    "tt = Path(\"work\\\\report\\\\requirements\\\\0y1 v485yw\\\\omkmz6ck9ig\\\\\")\n",
-    "\n",
-    "tt.is_dir()"
+    "a = Definition(\n",
+    "    title=\"dfssdfsdf\"\n",
+    ")\n",
+    "print(a)"
    ]
   }
  ],
